schicluster 使用 hicluster embedding 进行插补后数据的降维，而npz2h5ad_plot.ipynb是绘制 umap 图的系列代码

--- a/hires_code/HiRES/analysis_and_plot_notebooks/1_preprocess/1_calc_pairs_features.ipynb
+++ b/hires_code/HiRES/analysis_and_plot_notebooks/1_preprocess/1_calc_pairs_features.ipynb
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "palhgxl2dy",
    "metadata": {},
    "outputs": [
@@ -2216,6 +2216,27 @@
     "# 找到缺失的文件\n",
     "if len(metadata) != 7895:\n",
     "    print(f\"警告：metadata文件中的细胞数量({len(metadata)})与实际文件数量(7895)不匹配！\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cdps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcdps\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'cdps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cdps"
    ]
   },
   {
